:fix: 💄 fix double scroll bars in sign up card

--- a/routes/customViews/userAuth/SignUp/index.css
+++ b/routes/customViews/userAuth/SignUp/index.css
@@ -6,7 +6,6 @@
 
 .gx-app-login-main-content {
   height: 100%;
-  overflow-y: scroll;
 }
 
 .gx-app-logo-content {
